add meta tag description, add rel=noopener to target blank link index.html

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Warteeeg is cheap and tasty restaurant catalogue website.">
     <link rel="icon" type="image/png" href="w.png" />
     <title>Warteg Apps</title>
 </head>
@@ -20,7 +21,7 @@
             <ul>
                 <li> <a href="index.html">Home</a> </li>
                 <li> <a href="#">Favorite</a> </li>
-                <li> <a href="https://www.dicoding.com/users/fuadmln" target="_blank">About Us</a> </li>
+                <li> <a href="https://www.dicoding.com/users/fuadmln" target="_blank" rel="noopener">About Us</a> </li>
             </ul>
         </nav>
     </header>
