initiate app shell from index.js

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,7 +17,7 @@
             <h1>Warteeeg</h1>
         </div>
         <button id="hamburger" aria-label="hamburger">&#9776</button>
-        <nav class="nav-links">
+        <nav id="navigationDrawer" class="nav-links">
             <ul>
                 <li> <a href="index.html">Home</a> </li>
                 <li> <a href="#">Favorite</a> </li>
