--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,8 +19,9 @@
         <button id="hamburger" aria-label="hamburger">&#9776</button>
         <nav id="navigationDrawer" class="nav-links">
             <ul>
-                <li> <a href="index.html">Home</a> </li>
-                <li> <a href="#">Favorite</a> </li>
+                <li> <a href="index.html#/home">Home</a> </li>
+                <li> <a href="#search">Search</a> </li>
+                <li> <a href="#favorite">Favorite</a> </li>
                 <li> <a href="https://www.dicoding.com/users/fuadmln" target="_blank" rel="noopener">About Us</a> </li>
             </ul>
         </nav>
