--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -329,6 +329,7 @@ p::-webkit-scrollbar {
     nav.nav-links ul li{
         transition: all 0.1s ease-in-out;
         border-bottom: 0;
+        padding: 0 6px;
     }
 
     nav.nav-links ul li:hover{
