--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,6 +17,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -197,7 +198,7 @@ button{
     gap: 16px;
 }
 
-.restaurant{
+.explore__items .restaurant{
     position: relative;
     border-radius: 8px;
     overflow: hidden; /* agar border radius work pada flex*/
@@ -206,40 +207,40 @@ button{
     background-color: var(--gray-50,  #F9FAFB);
 }
 
-.restaurant:hover{
+.explore__items .restaurant:hover{
     box-shadow: rgba(49, 53, 59, .7) 3px 5px 8px 0;
     transition: all 0.2s ease-in-out;
 }
 
-.restaurant img{
+.explore__items .restaurant img{
     width: 100%;
     height: 200px;
     object-fit: cover;
     object-position: center;
 }
 
-.res__info{
+.explore__items .restaurant .res__info{
     padding: 8px 12px 12px;
 }
 
-.res__name{
+.explore__items .restaurant .res__name{
     margin-top: 16px;
     margin-bottom: 12px;
     word-spacing: 1px;
     letter-spacing: .8px;
 }
 
-.res__name a{
+.explore__items .restaurant .res__name a{
     text-decoration: none;
     color: black;
 }
 
-.res__name a:hover{
+.explore__items .restaurant .res__name a:hover{
     color: black;
     text-decoration: underline;
 }
 
-.res__rating{
+.explore__items .restaurant .res__rating{
     text-align: right;
     font-weight: bold;
     font-size: 0.9;
@@ -250,7 +251,7 @@ button{
     font-size: 1.3em;
 }
 
-.res__desc{
+.explore__items .restaurant .res__desc{
     font-weight: 300;
     max-height: 280px;
     letter-spacing: .7px;
@@ -262,7 +263,7 @@ button{
     -webkit-box-orient: vertical;
 }
 
-.res__city{
+.explore__items .restaurant .res__city{
     display: inline-block;
     position: absolute;
     top: 12px;
@@ -272,6 +273,181 @@ button{
     color: var(--primary-color, #FCD34D);
     font-weight: bold;
     border-radius: 5px;
+}
+
+/* DETAIL */
+.detail{
+    width: 100%;
+}
+
+.detail .restaurant img{
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.detail .res__info{
+    padding: 22px 12px 12px;
+    background-color: #fff;
+}
+
+.detail .res__name{
+    text-align: center;
+}
+
+.detail .res__desc{
+    margin-top: 15px;
+    font-weight: 300;
+    letter-spacing: .7;
+    text-align: justify;
+}
+
+.detail ul.info-list{
+    padding: 0 12px 12px;
+    background-color: #fff;
+}
+
+.detail ul.info-list .label{
+    font-weight: 600;
+    min-width: 9ch;
+}
+.detail ul.info-list .colon{
+    width: 1.5ch;
+}
+.detail ul.info-list .value{
+    width: auto;
+}
+
+.detail ul.info-list li{
+    padding: 6px 0;
+    border-bottom: 1px solid #9ca1a8;
+    display: flex;
+}
+
+.detail ul.info-list li:first-child{
+    border-top: 1px solid #9ca1a8;
+}
+
+.detail ul.info-list li:hover{
+    background-color: #F1F3F4;
+}
+
+.menu{
+    background-color: #fff;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.menu h2{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.foods, .drinks{
+    padding-bottom: 12px;
+}
+
+.foods h3{
+    border-left: 4px solid var(--primary-color);
+    padding-left: 12px;
+    margin-bottom: 8px;
+}
+
+.drinks h3{
+    border-left: 4px solid var(--secondary-color);
+    padding-left: 12px;
+    margin-bottom: 8px;
+}
+
+.foods ul, .drinks ul {
+    padding-left: 8px;
+    columns: 2;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+  }
+
+.foods ul>li, .drinks ul>li{
+    padding: 2px 0;
+    list-style-type: "❖ ";
+    list-style-position: inside;
+}
+
+.review-section{
+    background-color: #fff;
+}
+.review-section h2{
+    text-align: center;
+}
+
+.review{
+    border-bottom: 1px solid #9ca1a8;
+    padding: 8px 0;
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
+.review:hover{
+    background-color: #F1F3F4;
+}
+
+.review .review__name{
+    font-weight: 600;
+    font-size: 15px;
+    color: rgba(0, 0, 0, .87);
+}
+
+.review .review__date{
+    font-size: 14px;
+    color: rgba(0, 0, 0, .54);
+}
+
+.review .review__comment{
+    padding: 5px 0;
+    font-size: 14px;
+    color: rgba(0, 0, 0, .87);
+}
+
+.add-review{
+    padding: 12px;
+}
+
+.add-review h3{
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 600;
+}
+.add-review input, .add-review textarea{
+    display: block;
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border: 1px solid #9ca1a8;
+    background-color: #F1F3F4;
+    font-size: 14px;
+    font-family: var(--oxygen);
+}
+
+.add-review input:focus, .add-review textarea:focus{
+    background-color: white;
+    outline-color: red;
+    outline: none;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, .2), -2px -2px 3px rgba(0, 0, 0, .2);
+}
+
+.add-review button{
+    padding: 0 18px;
+    min-width: 44px;
+    min-height: 44px;
+    border-radius: 5px;
+    border: 0;
+    background-color: #111827;
+    color: white;
+    font-weight: 700;
+    font-family: var(--oxygen);
+    letter-spacing: 2px;
+    cursor: pointer;
 }
 
 /* FOOTER */
@@ -308,6 +484,9 @@ p::-webkit-scrollbar {
 @media only screen and (min-width: 600px) {
     body{
         margin-top: 75px; /*sesuai tinggi header */
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     header .brand h1{
@@ -385,13 +564,125 @@ p::-webkit-scrollbar {
     .hide-on-medium{
         display: none;
     }
-    
+
 }
 
 /* DEESKTOP DEVICE LAYOUT */
 @media only screen and (min-width: 992px) {
     .explore{
         padding: 30px 50px;
+    }
+
+    .detail .restaurant{
+        display: grid;
+        grid-template-areas: 
+        "image image"
+        "desc info-list";
+        grid-template-columns: 66% 34%;
+    }
+
+    .detail .restaurant>img{
+        grid-area: image;
+    }
+
+    .detail .restaurant .info-list{
+        grid-area: info-list;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-right: 32px;
+    }
+
+    .detail .restaurant .res__info{
+        grid-area: desc;
+        padding-bottom: 24px;
+        border-bottom-left-radius: 12px;
+        border-bottom-right-radius: 12px;
+    }
+
+    .detail .restaurant .res__desc{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    section.menu, section.review-section{
+        margin-top: 20px;
+        padding: 32px;
+        border-radius: 12px;
+    }
+
+    section.menu{
+        display: grid;
+        grid-template-areas: 
+        "header header"
+        "foods drinks";
+        box-shadow: rgba(49, 53, 59, .7) 1px 2px 2px 0;
+        column-gap: 18px;
+    }
+
+    .menu h2{
+        grid-area: header;
+    }
+
+    .menu h2, .review-section h2{
+        margin-bottom: 16px;
+        background-color: #111827;
+        color: white;
+        padding: 10px;
+        border-top-left-radius: 12px;
+        border-top-right-radius: 12px;
+    }
+
+    .menu .foods h3, .menu .drinks h3{
+        border-left: 0;
+        margin-bottom: 12px;
+        background-color: #999;
+        display: inline-block;
+        padding: 3px 12px;
+        border-top-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
+
+    .menu .foods h3{
+        background-color: var(--primary-color);
+    }
+
+    .menu .drinks h3{
+        background-color: var(--secondary-color);
+        color: white;
+    }
+
+    .menu .foods, .menu .drinks{
+        padding: 12px;
+        text-align: center;
+    }
+    .menu .foods{
+        grid-area: foods;
+        border: 2px solid var(--primary-color);
+        border-bottom-left-radius: 12px;
+        background-color: #FFFBEB;
+    }
+
+    .menu .drinks{
+        grid-area: drinks;
+        border: 2px solid var(--secondary-color);
+        border-bottom-right-radius: 12px;
+        background-color: #FEF2F2;
+    }
+
+    .menu .foods ul, .menu .drinks ul{
+        text-align: left;
+        font-weight: bold;
+    }
+
+    section.review-section{
+        margin-bottom: 20px;
+        box-shadow: rgba(49, 53, 59, .7) 1px 2px 2px 0;
+    }
+
+    .add-review input, .add-review textarea{
+        width: 70%;
     }
 
 }
