--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Warteeeg is cheap and tasty restaurant catalogue website.">
     <link rel="icon" type="image/png" href="w.png" />
+    <link rel="manifest" href="manifest.json">
     <title>Warteg Apps</title>
 </head>
 
