--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -347,6 +347,7 @@ button{
     justify-content: center;
     width: 55px;
     height: 55px;
+    border: 0;
     font-size: 32px;
     border-radius: 50%;
     cursor: pointer;
@@ -738,6 +739,10 @@ p::-webkit-scrollbar {
         display: none;
     }
 
+    .like-btn{
+        right: 32px;
+    }
+
     .results{
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -784,6 +789,11 @@ p::-webkit-scrollbar {
         width: 90%;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .like-btn{
+        bottom: 50%;
+        transform: translate(0, 50%);
     }
 
     section.menu, section.review-section{
