--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -643,6 +643,38 @@ footer p{
     text-align: center;
 }
 
+.loader {
+    border: 8px solid rgb(252, 211, 77);
+    border-left: 8px solid rgb(220, 38, 38);
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    -webkit-animation: spin 2s linear infinite;
+    /* Safari */
+    animation: spin 1.8s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 /* Scroll bar */
 
 /* Width */
