--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -644,6 +644,12 @@ footer p{
 }
 
 .loader {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    /*  sesuai width, height  */
+    margin-left: -18px;
+    margin-top: -18px;
     border: 8px solid rgb(252, 211, 77);
     border-left: 8px solid rgb(220, 38, 38);
     border-radius: 50%;
