--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -239,6 +239,9 @@ button{
 .explore__items .restaurant .res__name a{
     text-decoration: none;
     color: black;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    min-width: 44px;
 }
 
 .explore__items .restaurant .res__name a:hover{
@@ -282,10 +285,6 @@ button{
 }
 
 /* DETAIL */
-.detail{
-    /* width: 100%; */
-}
-
 .detail .restaurant img{
     width: 100%;
     height: 250px;
@@ -448,6 +447,7 @@ button{
 .add-review input, .add-review textarea{
     display: block;
     width: 100%;
+    min-height: 44px;
     padding: 8px;
     margin-bottom: 10px;
     border-radius: 5px;
@@ -596,6 +596,9 @@ h2.search-query{
 .results .restaurant h3 a{
     text-decoration: none;
     color: black;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    min-width: 44px;
 }
 
 .results .restaurant h3 a:hover{
