--- a/src/styles/search-page.css
+++ b/src/styles/search-page.css
@@ -60,6 +60,7 @@ h2.search-query{
 }
 
 .results{
+    display: block;
     padding: 0 12px;
 }
 
@@ -137,7 +138,7 @@ h2.search-query{
 }
 
 .no-results{
-    margin-top: 24px;
+    margin-top: 18px;
 }
 
 .no-results p:first-child{
